<resources>
    <string name="app_name">fare share</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>

    <string name="Signup">SignUp</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome</string>
    <string name="driver">Driver</string>
    <string name="title_activity_rpughwork">rpughwork</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update">update</string>
    <string name="title_activity_extera">ExteraActivity</string>
    <string name="create_fare">Create Fare</string>
    <string name="enter_base_fare">Enter base fare</string>
    <string name="enter_km_fare">Enter km fare</string>
    <string name="add">Add</string>
    <string name="title_activity_create_ride">CreateRideActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="rides_details">Rides Details</string>

</resources>