<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DriverLoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="165dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/drivermail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/driverlogin" />

    <EditText
        android:id="@+id/drivermail"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/kavoon"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/driverpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/driverpassword"
        android:layout_width="274dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/picon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/kavoon"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/driverlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drivermail" />

    <Button
        android:id="@+id/driverlogin"
        android:layout_width="236dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#54305a"
        android:fontFamily="@font/kavoon"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverpassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"

        android:fontFamily="@font/kavoon"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/driver_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverlogin" />

    <Button
        android:id="@+id/driver_signup"
        android:layout_width="236dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#54305a"
        android:fontFamily="@font/kavoon"
        android:text="sign up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>