<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="3dp"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingTop="4dp"
    android:paddingRight="4dp"
    android:paddingBottom="4dp"
    android:textDirection="firstStrong"
    tools:context=".activities.AdminLoginActivity"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="49dp"
        android:fontFamily="@font/kavoon"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="6dp"
        android:text="login"
        android:textColor="#54305a"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <EditText
        android:id="@+id/adminname"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:drawableStart="@drawable/name"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/kavoon"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/adminPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/adminPassword"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginBottom="264dp"
        android:autofillHints=""
        android:drawableStart="@drawable/picon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/kavoon"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColorHint="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminname" />

    <Button
        android:id="@+id/clickloginadmin"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#54305a"
        android:fontFamily="@font/kavoon"

        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clickcanceladmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <Button
        android:id="@+id/clickcanceladmin"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#54305a"
        android:fontFamily="@font/kavoon"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clickloginadmin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />
</androidx.constraintlayout.widget.ConstraintLayout>