<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DriverRegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:title="passenger Signup"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/p_reg"
                android:fontFamily="@font/kavoon"
                android:gravity="center"
                android:text="Passenger"
                android:textColor="#54305a"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/passenger_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/name"
                android:drawablePadding="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passenger_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                android:drawablePadding="7dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passenger_cellno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="7dp"
                android:ems="10"
                android:fontFamily="@font/kavoon"
                android:hint="cell_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />



            <EditText
                android:id="@+id/p_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/picon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_gender_passenger"
                android:layout_width="305dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:drawableStart="@drawable/picon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/kavoon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="textStart"

                android:textSize="14sp"
                />


            <Button
                android:id="@+id/passenger_signup"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:backgroundTint="#54305a"
                android:fontFamily="@font/kavoon"
                android:text="Sign up"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                />

        </LinearLayout>


    </ScrollView>


</LinearLayout>




