<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DriverRegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:title="Driver Signup"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/d_reg"
                android:drawablePadding="2dp"
                android:fontFamily="@font/kavoon"
                android:gravity="center"
                android:paddingTop="1dp"
                android:text="@string/driver"
                android:textAlignment="center"
                android:textColor="#54305a"
                android:textSize="46sp" />

            <EditText
                android:id="@+id/driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/name"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driver_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                android:drawablePadding="7dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driver_cellno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="7dp"
                android:ems="10"
                android:paddingStart="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="cell_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driver_cnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="7dp"
                android:ems="10"
                android:fontFamily="@font/kavoon"
                android:hint="cnic"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driver_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="5dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/picon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_gender_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/gender"
                android:drawablePadding="7dp"
                android:ems="10"
                android:fontFamily="@font/kavoon"
                android:hint="gender"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_vehicle_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/gender"
                android:drawablePadding="7dp"
                android:ems="10"
                android:fontFamily="@font/kavoon"
                android:hint="gender"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/vehical_numberplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/numplate"
                android:drawablePadding="7dp"
                android:ems="10"
                android:paddingStart="5dp"
                android:fontFamily="@font/kavoon"
                android:hint=" vehical number plate"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/driver_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/licenc"
                android:drawablePadding="7dp"
                android:ems="10"
                android:paddingStart="5dp"
                android:fontFamily="@font/kavoon"
                android:hint="licence no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <Button
                android:id="@+id/driver_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#54305a"
                android:fontFamily="@font/kavoon"
                android:text="Sign up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>




